--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -28,6 +28,6 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           # token: "${{ env.MY_ENV_VAR }}"
-          # path: ./my-tools/mabi-pack
+          working-directory: ./my-tools
           command: build
           args: --release 
