--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,5 +1,9 @@
 name: learn-github-actions
-on: [push]
+on:
+  push:
+    # Sequence of patterns matched against refs/tags
+    tags:
+    - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 jobs:
   unpack-tool:
     runs-on: ubuntu-20.04
@@ -16,15 +20,6 @@ jobs:
           # token: "${{ env.MY_ENV_VAR }}"
           toolchain: stable
 
-      # - name: curl
-      #   uses: wei/curl@master
-      #   with:
-      #     args: https://sh.rustup.rs -sSf | sh -y
-
-      # - name: Run a one-line script
-      #   # working-directory: ./my-tools
-      #   run: cargo build --release
-
       - uses: actions-rs/cargo@v1
         with:
           # token: "${{ env.MY_ENV_VAR }}"
@@ -39,3 +34,38 @@ jobs:
       - name: test tool
         # working-directory: ./my-tools
         run: mabi-pack --version
+
+      - name: unpack xml
+        # working-directory: ./my-tools
+        run: |
+          mabi-pack extract -i 341_to_342.pack -o ./342 --filter "itemdb.xml"
+          mabi-pack extract -i 341_to_342.pack -o ./342 --filter "race.xml"
+          mabi-pack extract -i 341_to_342.pack -o ./342 --filter "production.xml"
+          mabi-pack extract -i 341_to_342.pack -o ./342 --filter "skillinfo.xml"
+          mabi-pack extract -i 341_to_342.pack -o ./342 --filter "propdb.xml"
+
+      - name: Build project # This would actually build your project, using zip for an example artifact
+        run: |
+          zip --junk-paths 342 ./342
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: true
+          prerelease: true
+
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./342.zip
+          asset_name: 342.zip
+          asset_content_type: application/zip
