--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -8,6 +8,7 @@ jobs:
   unpack-tool:
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v2
 
       - uses: actions/checkout@v2
         with:
@@ -35,20 +36,18 @@ jobs:
         # working-directory: ./my-tools
         run: mabi-pack --version
 
-      - uses: actions/checkout@v2
-      
       - name: unpack xml
         # working-directory: ./my-tools
         run: |
-          mabi-pack extract -i 341_to_342.pack -o ./342 --filter "itemdb.xml"
-          mabi-pack extract -i 341_to_342.pack -o ./342 --filter "race.xml"
-          mabi-pack extract -i 341_to_342.pack -o ./342 --filter "production.xml"
-          mabi-pack extract -i 341_to_342.pack -o ./342 --filter "skillinfo.xml"
-          mabi-pack extract -i 341_to_342.pack -o ./342 --filter "propdb.xml"
+          mabi-pack extract -i $GITHUB_WORKSPACE/341_to_342.pack -o $GITHUB_WORKSPACE/342 --filter "itemdb.xml"
+          mabi-pack extract -i $GITHUB_WORKSPACE/341_to_342.pack -o $GITHUB_WORKSPACE/342 --filter "race.xml"
+          mabi-pack extract -i $GITHUB_WORKSPACE/341_to_342.pack -o $GITHUB_WORKSPACE/342 --filter "production.xml"
+          mabi-pack extract -i $GITHUB_WORKSPACE/341_to_342.pack -o $GITHUB_WORKSPACE/342 --filter "skillinfo.xml"
+          mabi-pack extract -i $GITHUB_WORKSPACE/341_to_342.pack -o $GITHUB_WORKSPACE/342 --filter "propdb.xml"
 
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          zip --junk-paths 342 ./342
+          zip --junk-paths 342 $GITHUB_WORKSPACE/342
 
       - name: Create Release
         id: create_release
@@ -68,6 +67,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./342.zip
+          asset_path: $GITHUB_WORKSPACE/342.zip
           asset_name: 342.zip
           asset_content_type: application/zip
