--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -36,20 +36,26 @@ jobs:
         # working-directory: ./my-tools
         run: mabi-pack --version
 
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/v*/}" >> $GITHUB_ENV
+
+      - name: Set PACKFILE
+        run: echo "PACKFILE=$(find ./  -name *$RELEASE_VERSION.pack | sed 's/^\.\///g')" >> $GITHUB_ENV
+
       - name: unpack xml
         # working-directory: ./my-tools
         run: |
-          mabi-pack extract -i $GITHUB_WORKSPACE/341_to_342.pack -o $GITHUB_WORKSPACE/342 --filter "itemdb.xml"
-          mabi-pack extract -i $GITHUB_WORKSPACE/341_to_342.pack -o $GITHUB_WORKSPACE/342 --filter "race.xml"
-          mabi-pack extract -i $GITHUB_WORKSPACE/341_to_342.pack -o $GITHUB_WORKSPACE/342 --filter "production.xml"
-          mabi-pack extract -i $GITHUB_WORKSPACE/341_to_342.pack -o $GITHUB_WORKSPACE/342 --filter "skillinfo.xml"
-          mabi-pack extract -i $GITHUB_WORKSPACE/341_to_342.pack -o $GITHUB_WORKSPACE/342 --filter "propdb.xml"
+          mabi-pack extract -i $GITHUB_WORKSPACE/$PACKFILE -o $GITHUB_WORKSPACE/$RELEASE_VERSION --filter "itemdb.xml"
+          mabi-pack extract -i $GITHUB_WORKSPACE/$PACKFILE -o $GITHUB_WORKSPACE/$RELEASE_VERSION --filter "race.xml"
+          mabi-pack extract -i $GITHUB_WORKSPACE/$PACKFILE -o $GITHUB_WORKSPACE/$RELEASE_VERSION --filter "production.xml"
+          mabi-pack extract -i $GITHUB_WORKSPACE/$PACKFILE -o $GITHUB_WORKSPACE/$RELEASE_VERSION --filter "skillinfo.xml"
+          mabi-pack extract -i $GITHUB_WORKSPACE/$PACKFILE -o $GITHUB_WORKSPACE/$RELEASE_VERSION --filter "propdb.xml"
 
       - uses: papeloto/action-zip@v1
         with:
-          files: $GITHUB_WORKSPACE/342/
+          files: $GITHUB_WORKSPACE/$RELEASE_VERSION/
           recursive: false
-          dest: 342.zip
+          dest: $RELEASE_VERSION.zip
 
       - name: Create Release
         id: create_release
@@ -69,6 +75,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: 342.zip
-          asset_name: 342.zip
+          asset_path: $RELEASE_VERSION.zip
+          asset_name: $RELEASE_VERSION.zip
           asset_content_type: application/zip
