--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: Get the version
         id: get_version
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
       - name: Set PACKFILE
         run: echo "PACKFILE=$(find ./  -name *$342.pack | sed 's/^\.\///g')" >> $GITHUB_ENV
