--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -59,7 +59,7 @@ jobs:
 
       - uses: papeloto/action-zip@v1
         with:
-          files: $GITHUB_WORKSPACE/$RELEASE_VERSION/
+          files:  ${{ env.GITHUB_WORKSPACE }}/${{ env.RELEASE_VERSION }}/
           recursive: false
           dest: $RELEASE_VERSION.zip
 
@@ -81,6 +81,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: $RELEASE_VERSION.zip
-          asset_name: $RELEASE_VERSION.zip
+          asset_path: ${{ env.RELEASE_VERSION }}.zip
+          asset_name: ${{ env.RELEASE_VERSION }}.zip
           asset_content_type: application/zip
