--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           files:  ${{ env.GITHUB_WORKSPACE }}/${{ env.RELEASE_VERSION }}/
           recursive: false
-          dest: ${{ env.RELEASE_VERSION }}
+          dest: ${{ env.RELEASE_VERSION }}.zip
 
       - name: Create Release
         id: create_release
